refactor: change Collectors.toList to Stream.toList